# flask_blog

./: .gitignore  README.md  app.db  config.py  pyproject.toml  tests.py
app/: __init__.py  email.py  forms.py  models.py  routes.py
app/templates/: 500.html  _post.html  base.html  edit_profile.html  index.html  login.html  register.html  reset_password.html  reset_password_request.html  user.html
app/templates/email/: reset_password.html  reset_password.txt
migrations/versions/: 2f3ae2c1e553_users_table.py  72183a8dea47_posts_table.py  a476c7c22eca_followers.py  e98037531437_new_fields_in_user_model.py
