[tool.poetry]
name = "flask-tutorial"
version = "0.1.0"
description = ""
authors = ["Julia <julialn.sunni@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
Flask = "^1.1.2"
python-dotenv = "^0.15.0"
Flask-WTF = "^0.14.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
