[tool.poetry]
name = "flask-tutorial"
version = "0.1.0"
description = ""
authors = ["Julia <julialn.sunni@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
Flask = "^1.1.2"
python-dotenv = "^0.15.0"
Flask-WTF = "^0.14.3"
Flask-SQLAlchemy = "^2.4.4"
Flask-Migrate = "^2.5.3"
Flask-Login = "^0.5.0"
email-validator = "^1.1.2"
Flask-Mail = "^0.9.1"
PyJWT = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
